--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-splash-screen": "^3.3.0"
