--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
